--- a/package.json
+++ b/package.json
@@ -1,25 +1,61 @@
 {
   "name": "yt-presence",
-  "version": "1.0.0",
-  "description": "Discord Rich Presence for YouTube and YouTube Music.",
-  "main": "main.js",
+  "productName": "YT Presence",
+  "version": "0.0.1",
+  "description": "Show your current YouTube Video / Song in your Discord profile.",
+  "main": "src/index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\""
   },
-  "repository": "https://github.com/Timeraa/YT-Presence.git",
   "keywords": [],
-  "author": "Timeraa & RedstoneDaedalus",
+  "author": "Timeraa",
   "license": "MIT",
-  "devDependencies": {
-    "electron": "^2.0.4"
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "YT Presence"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   },
   "dependencies": {
     "chalk": "^2.4.1",
     "discord-rpc": "^3.0.0-beta.12",
+    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.16.3",
     "html-entities": "^1.2.1",
     "menubar": "^5.2.3",
-    "simple-youtube-api": "^5.0.2",
     "update-electron-app": "^1.3.0"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.22",
+    "@electron-forge/maker-deb": "^6.0.0-beta.22",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.22",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.22",
+    "@electron-forge/maker-zip": "^6.0.0-beta.22",
+    "electron": "2.0.4"
   }
 }
