--- a/package.json
+++ b/package.json
@@ -15,39 +15,19 @@
   "author": "Timeraa",
   "license": "MIT",
   "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "YT Presence"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
+    "forge": "./forge.config.js"
   },
   "dependencies": {
+    "auto-launch": "^5.0.5",
     "chalk": "^2.4.1",
     "discord-rpc": "^3.0.0-beta.12",
+    "electron-config": "^1.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "html-entities": "^1.2.1",
     "menubar": "^5.2.3",
+    "request": "^2.87.0",
     "update-electron-app": "^1.3.0"
   },
   "devDependencies": {
