--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "YT Presence",
-  "version": "0.1",
+  "version": "0.3",
   "description":
     "Show your current YouTube Video / Song in your Discord profile.",
   "manifest_version": 2,
@@ -26,8 +26,5 @@
       "matches": ["https://www.youtube.com/*"]
     }
   ],
-  "permissions": [
-    "http://localhost/*",
-    "tabs"
-  ]
+  "permissions": ["http://localhost/*", "tabs"]
 }
