--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "auto-launch": "^5.0.5",
     "chalk": "^2.4.1",
-    "discord-rpc": "^3.0.0-beta.12",
+    "discord-rpc": "^3.0.0",
     "electron-config": "^1.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.16.3",
