Bug fixes/squirrel stuffs

--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,5 @@
   "yt_client_id": "463097721130188830",
   "ytm_client_id": "463151177836658699",
   "version": "0.2",
-  "devBuild": false
+  "devBuild": true
 }
