--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yt-presence",
+  "name": "yt_presence",
   "productName": "YT Presence",
   "version": "1.0.0",
   "description": "YT Presence adds cool Features to YouTube/YouTube Music. Like for example Discord Rich Presence integration, Media controls and much more.",
