--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "yt_client_id": "463097721130188830",
   "ytm_client_id": "463151177836658699",
-  "version": "0.2",
-  "devBuild": true
+  "version": "1.0",
+  "devBuild": false
 }
