--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
   "yt_client_id": "463097721130188830",
   "ytm_client_id": "463151177836658699",
+  "nflix_client_id": "499981204045430784",
   "version": "1.0",
   "devBuild": false
 }
