--- a/src/config.json
+++ b/src/config.json
@@ -3,6 +3,7 @@
   "ytm_client_id": "463151177836658699",
   "nflix_client_id": "499981204045430784",
   "twitch_client_id": "501021996336021504",
+  "scloud_client_id": "501021185887436810",
   "version": "1.1",
   "devBuild": true
 }
