--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "YT Presence",
   "author": "Timeraa",
-  "version": "1.0",
-  "description": "YT Presence adds cool Features to YouTube/YouTube Music. Like Discord Rich Presence integration, Media controls and much more.",
+  "version": "1.1",
+  "description": "YT Presence adds Discord Rich Presence integration, Media controls and much more to YouTube/YouTube Music, Twitch etc...",
   "manifest_version": 2,
   "icons": {
     "2024": "icon.png"
