--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -7,6 +7,10 @@
   "icons": {
     "2024": "icon.png"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "presistent": false
+  },
   "browser_action": {
     "default_icon": {
       "2024": "icon.png"
