--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -2,7 +2,7 @@
   "name": "YT Presence",
   "author": "Timeraa",
   "version": "1.1.1",
-  "description": "YT Presence adds Discord Rich Presence integration, Media controls and much more to YouTube/YouTube Music, Twitch etc...",
+  "description": "__MSG_appDesc__",
   "manifest_version": 2,
   "default_locale": "en",
   "icons": {
