--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "yt_presence",
-  "productName": "YT Presence",
+  "name": "premid",
+  "productName": "PreMiD",
   "version": "1.1.0",
-  "description": "YT Presence adds cool Features to YouTube/YouTube Music. Like for example Discord Rich Presence integration, Media controls and much more.",
+  "description": "PreMiD adds cool Features to YouTube/YouTube Music. Like for example Discord Rich Presence integration, Media controls and much more.",
   "main": "index.js",
-  "repository": "Timeraa/YT-Presence",
+  "repository": "Timeraa/PreMiD",
   "keywords": [],
   "author": "Timeraa",
   "license": "MIT",
