--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "premid",
   "productName": "PreMiD",
   "version": "1.2.0",
-  "description": "PreMiD adds cool Features to YouTube/YouTube Music. Like for example Discord Rich Presence integration, Media controls and much more.",
+  "description": "Discord Rich Presence, Media Controls... for websites.",
   "main": "index.js",
-  "repository": "Timeraa/PreMiD",
+  "repository": "https://github.com/Timeraa/PreMiD",
   "scripts": {
     "start": "electron src/.",
-    "pkgmac": "electron-packager ./src/ --out=./out/ --asar --overwrite --icon=./appIcon.ico --osx-sign.identity='Florian Metz'",
-    "pkgwin": "electron-packager ./src/ --out=./out/ --overwrite --icon=./appIcon.ico",
+    "pkgmac": "electron-packager ./src/ --out=./out/ --asar --overwrite --icon=./installer_assets/appIcon.ico --osx-sign.identity='Florian Metz'",
+    "pkgwin": "electron-packager ./src/ --out=./out/ --overwrite --icon=./installer_assets/appIcon.ico",
     "installer-mac": "npm run pkgmac && node installer",
     "installer-win": "npm run pkgwin && node installer"
   },
-  "keywords": [],
   "author": "Timeraa",
   "license": "MIT",
   "devDependencies": {
