--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "electron src/.",
     "pkgmac": "electron-packager ./src/ --out=./out/ --asar --overwrite --icon=./installer_assets/appIcon.ico --osx-sign.identity='Florian Metz'",
     "pkgwin": "electron-packager ./src/ --out=./out/ --overwrite --icon=./installer_assets/appIcon.ico",
-    "installer-mac": "npm run pkgmac && node installer",
-    "installer-win": "npm run pkgwin && node installer"
+    "installer-mac": "npm run pkgmac && node installer_assets/installer",
+    "installer-win": "npm run pkgwin && node installer_assets/installer"
   },
   "author": "Timeraa",
   "license": "MIT",
