Linux support (hopefully)

--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
   "productName": "PreMiD",
   "productVersion": "1.2",
   "name": "premid",
+  "description": "Discord Rich Presence, Media Controls... for websites.",
   "version": "1.2.0",
   "main": "index.js",
   "author": "Timeraa",
