--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start": "npm start --prefix src/.",
     "pkgmac": "electron-packager ./src/ --out=./out/ --asar --overwrite --icon=./installer_assets/appIcon.ico --osx-sign.identity='Florian Metz'",
     "pkgwin": "electron-packager ./src/ --out=./out/ --overwrite --icon=./installer_assets/appIcon.ico",
-    "pkglinux": "electron-packager --asar --platform=linux --arch=x32 ./src/ --out=./out/ --overwrite --icon=./appIcon.ico",
+    "pkglinux": "electron-packager ./src/ --out=./out/ --overwrite --icon=./appIcon.ico --asar --platform=linux --arch=x64",
     "installer-mac": "npm run pkgmac && node installer_assets/installer",
-    "installer-win": "npm run pkgwin && node installer_assets/installer"
+    "installer-win": "npm run pkgwin && node installer_assets/installer",
+    "installer-linux": "npm run pkglinux && electron-installer-debian --src out/PreMiD-linux-x64/ --dest dist/installer/ --arch amd64"
   },
   "author": "Timeraa",
   "license": "MIT",
