--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -2,9 +2,7 @@
   "name": "PreMiD",
   "author": "Timeraa & Fruxh",
   "version": "1.2.45",
-  "description": "__MSG_appDesc__",
   "manifest_version": 2,
-  "default_locale": "en",
   "web_accessible_resources": ["icon.png", "languages/*.json"],
   "icons": {
     "2024": "icon.png"
@@ -13,8 +11,7 @@
     "scripts": [
       "js/util/socket.io-2.1.1.min.js",
       "js/util/presence.js",
-      "js/background.js",
-      "js/util/custom-i18n.js"
+      "js/background.js"
     ],
     "presistent": false
   },
@@ -29,7 +26,8 @@
       "js": [
         "js/util/jquery-3.3.1.min.js",
         "js/util/socket.io-2.1.1.min.js",
-        "js/util/socketConnector.js"
+        "js/util/socketConnector.js",
+        "js/util/custom-i18n.js"
       ],
       "css": ["css/connect.css"],
       "matches": ["<all_urls>"]
