--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -83,6 +83,10 @@
     {
       "js": ["js/presences/SuperAnimes.js"],
       "matches": ["*://www.superanimes.site/*"]
+    },
+    {
+      "js": ["js/presences/9Anime.js"],
+      "matches": ["*://www1.9anime.to/*"]
     }
   ],
   "permissions": [
