--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -16,7 +16,7 @@
     "presistent": false
   },
   "browser_action": {
-    "default_popup": "html/popup/popup.html",
+    "default_popup": "html/popup.html",
     "default_icon": {
       "2024": "icon.png"
     }
