--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,6 +1,8 @@
 {
   "name": "PreMiD",
   "author": "Timeraa & Fruxh",
+  "description": "__MSG_description__",
+  "default_locale": "en",
   "version": "1.2.50",
   "manifest_version": 2,
   "web_accessible_resources": ["icon.png", "languages/*.json"],
