--- a/DiscordBot/package.json
+++ b/DiscordBot/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "premid-api",
+  "name": "premid",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Timeraa",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^11.4.2",
     "dotenv": "^6.1.0",
-    "express": "^4.16.4",
     "mysql": "^2.16.0",
-    "nodemon": "^1.18.7",
     "utf8": "^3.0.0"
   }
 }
